# pacman-bevy

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci_checks.yml
assets/: lighthouse.txt  map.txt
src/: ascii.rs  gameloop.rs  lighthouse.rs  main.rs  map.rs  player.rs  view.rs
src/entities/: ghost.rs  mod.rs  player.rs
src/entities/player/: direction.rs  mod.rs
src/map/: coin.rs  mod.rs  tile.rs  tilemap.rs  wall.rs
src/map/wall/: mod.rs  wall_part.rs
src/player/: direction.rs  mod.rs
