[package]
name = "pacman-bevy"
version = "0.1.0"
edition = "2021"
authors = ["Louis Meyer (H1ghBre4k3r) <h1ghbre4k3r@dev.bre4k3r.de>"]
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.14.2"
dotenv = "0.15.0"
lighthouse-client = "6.2.1"
tokio = { version = "1.40.0", features = ["full"] }
